# Gost

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  G_DEBUG=fatal-warnings  HELP.md  README.md  RELEASE.md  build-appimage.sh  debug_launch.py  debug_launch2.py  essay-builder.spec  gost-0.1.4-x86_64.AppImage  gost-1.2.0-x86_64.AppImage  gost.desktop  install.sh  pyproject.toml  setup.py  uninstall.sh
.claude/: settings.local.json
.github/workflows/: publish.yml
AppDir/: .DirIcon  AppRun  ca.astheology.Gost.desktop  ca.calstfrancis.Gost.desktop
AppDir/etc/fonts/: fonts.conf
AppDir/usr/lib/essay-builder/essay_builder/: __init__.py  app.py  config.py  latex_compiler.py  logger.py  texgen.py  typstgen.py  validators.py  version.py  window.py
AppDir/usr/lib/gost/essay_builder/: preview_compiler.py  validators.py  window.py
AppDir/usr/lib/python/essay_builder/: __init__.py  app.py  csl_styles.py  logger.py  style_packs.py  texgen.py  typstgen.py
AppDir/usr/share/appdata/: ca.calstfrancis.Gost.appdata.xml
AppDir/usr/share/applications/: ca.astheology.EssayBuilder.desktop  ca.calstfrancis.Gost.desktop
AppDir/usr/share/metainfo/: ca.astheology.EssayBuilder.metainfo.xml  ca.astheology.Gost.metainfo.xml  ca.calstfrancis.Gost.metainfo.xml
essay_builder/: __init__.py  app.py  config.py  journal_importer.py  languagetool.py  latex_compiler.py  setup_desktop.py  texgen.py  typstgen.py  version.py  window.py  wordgen.py
essay_builder/fonts/: README.md
tests/: test_texgen.py  test_typstgen.py
