[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gost-academic"
dynamic = ["version"]
description = "Academic essay templater — GTK4/libadwaita app for LaTeX, Typst, and Word templates"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
keywords = [
    "latex", "typst", "essay", "academic", "bibliography",
    "sbl", "chicago", "apa", "mla", "asa", "turabian", "harvard",
    "sociology", "theology", "humanities", "gtk4", "gnome",
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
]
# GTK4 / PyGObject cannot be installed via pip — they are system packages.
# See README.md § System Requirements for distribution-specific install commands.
dependencies = []

[project.optional-dependencies]
word = ["python-docx>=1.0"]

[project.scripts]
gost = "essay_builder.app:main"
gost-setup-desktop = "essay_builder.setup_desktop:main"

[project.urls]
Homepage = "https://github.com/calstfrancis/gost"
Issues = "https://github.com/calstfrancis/gost/issues"
Changelog = "https://github.com/calstfrancis/gost/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = { attr = "essay_builder.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["essay_builder*"]

[tool.setuptools.package-data]
essay_builder = ["fonts/*.ttf", "fonts/*.otf", "*.svg"]
